--- a/OAT-prova.html
+++ b/OAT-prova.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>OAT Prova</title>
     <link rel="stylesheet" href="css/OAT-prova.css">
 </head>
 <body>
